fix layout breaking bug

--- a/GoesTop/assign02/style.css
+++ b/GoesTop/assign02/style.css
@@ -61,13 +61,18 @@ body {
 /* ▼ for card-main-container ▼ */
 /* ▼ for card-main-container ▼ */
 
-img{
+.card{
+	width : 60px;
+	height : auto;
+	
 	top : 0;
 	border : solid 3px rgba(255,255,255,0);
 	transition : all 0.5s;
 }
-img:hover{
+.card:hover{
 	top : -10px;
+	width : 80px;
+	height : auto;
 	border-color : rgba(255, 217, 0, 1);
 	z-index : 1001;
 }
@@ -96,10 +101,7 @@ img:hover{
 	position : relative;
 	top : 0;
 }
-.card{
-	width : 70px;
-	height : auto;
-}
+
 .dummy{
 	padding-bottom : 105px;	
 }
